Chatbot service complete in home page

--- a/RisckTrack.WEB/Components/Pages/Home.razor
+++ b/RisckTrack.WEB/Components/Pages/Home.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@rendermode InteractiveServer
+
 <PageTitle>Metodología de Riesgo de Activos Digitales</PageTitle>
 
 <div class="page-container">
@@ -80,3 +82,5 @@
         <p>Realizado por: Yuliana Capito, Soledad Cabrera y Crhystel Velasco – Universidad de las Américas</p>
     </footer>
 </div>
+
+<ChatbotWidget />
